spacing fix

--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -17,14 +17,14 @@
       margin-top: 1rem;
     }
     @media (min-width: $xl) {
-      width: 190px;
-      height: 190px;
-      margin-top: 4rem;
+      width: 160px;
+      height: 160px;
+      margin-top: 2rem;
     }
-    @media (min-width: $xxl) {
+    @media (min-width: 1600px) {
       width: 190px;
       height: 190px;
-      margin-top: 4rem;
+      // margin-top: 4rem;
     }
   }
   .carousel-caption {
@@ -37,9 +37,9 @@
         font-size: 16px;
       }
       @media (min-width: $xl) {
-        font-size: 25px;
+        font-size: 20px;
       }
-      @media (min-width: $xxl) {
+      @media (min-width: 1600px) {
         font-size: 28px;
       }
     }
